--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
     </site>
   </distributionManagement>
 
-  
-    
+  <build>
+    <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
